<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.codenotepad.chao.firstapp.SettingsActivity$GeneralPreferenceFragment"
        android:title="@string/pref_header_general" android:icon="@drawable/ic_info_black_24dp" />
    <header
        android:fragment="com.codenotepad.chao.firstapp.SettingsActivity$PlayImagesPreferenceFragment"
        android:title="@string/pref_header_play_images"/>
    <header
        android:fragment="com.codenotepad.chao.firstapp.SettingsActivity$NotificationPreferenceFragment"
        android:title="@string/pref_header_notifications"
        android:icon="@drawable/ic_notifications_black_24dp" />

    <header
        android:fragment="com.codenotepad.chao.firstapp.SettingsActivity$DataSyncPreferenceFragment"
        android:title="@string/pref_header_data_sync" android:icon="@drawable/ic_sync_black_24dp" />

</preference-headers>
