<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">
    <TextView android:text="Hello World!!" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView android:text="Hello, Chao." android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText android:id="@+id/edit_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/edit_message"/>
        <Button android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_send"
            android:onClick="sendMessage"/>
    </LinearLayout>
    <Button android:id="@+id/button_open_browser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Browse"
        android:onClick="openBrowser"/>
    <Button android:id="@+id/button_pick_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_pick_contact"
        android:onClick="pickContact"/>
    <Button
        android:id="@+id/button_take_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_take_picture"
        android:onClick="takePicture"/>
    <Button
        android:id="@+id/button_clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Clock"
        android:onClick="viewClock"/>
    <Button
        android:id="@+id/view_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="View Gallery"
        android:onClick="viewImage"/>
    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <AnalogClock
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
